--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.mtthsfrdrch.an3mote.sw2"
-    android:versionCode="60"
-    android:versionName="0.6.0" >
+    android:versionCode="61"
+    android:versionName="0.6.1" >
 
     <uses-permission android:name="com.sonyericsson.extras.liveware.aef.EXTENSION_PERMISSION" />
 
@@ -12,7 +12,7 @@
         android:theme="@style/ExtensionLightTheme" >
         <activity
             android:name=".ATVPreferenceActivity"
-            android:label="@string/preferences_title" >
+            android:label="@string/about_title" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
